[YLI-286]: Fixed text spacing.

--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -923,8 +923,9 @@ label {
 }
 
 .edit-registration-actions .fieldset-wrapper a.btn {
-  margin-right: 4px !important;
-  padding: 6px 12px;
+  margin-right: 3px !important;
+  padding: 6px 10px;
+  float: left;
   font-size: 14px;
   margin-bottom: 10px;
   text-transform: capitalize;
