--- a/openy_lily/sass/misc/_forms.scss
+++ b/openy_lily/sass/misc/_forms.scss
@@ -201,12 +201,14 @@ label {
   }
 }
 
+
 .edit-registration-actions {
   .fieldset-wrapper {
     a.btn {
-      margin-right: 4px !important;
+      margin-right: 3px !important;
       @extend .pink-button;
-      padding: 6px 12px;
+      padding: 6px 10px;
+      float: left;
       font-size: 14px;
       margin-bottom: 10px;
       text-transform: capitalize;
